# QualityAssuranceAgent

./: .env.example  README.md  app_UI_viewer_tk.py  app_log_viewer_tk.py  app_main_hub.py  app_ocr_viewer_tk.py  app_test_images_viewer_tk.py  architecture.md  constants.json  main.py  nuitka.bat  nuitka_size_estimate.py  ocr_viewer_tk.py  prompts.json  pyproject.toml  requirements.txt  run_all_tests.bat  run_log_viewer_tk.py  run_windows_chrome_enter_test.bat  test.py
cua_mcp/: active_monitor_capture.py  coordinate_selection.py  hand_tools.py  select_text.py  select_ui_element.py  step_module.py  steps.py  storage.py  tool_module.py  tools.py  ui_element_selection.py  yolo_onnx.py
mcp/: __init__.py  tools.py
runtime_cmds/: runtime_commands.txt
scripts/: open_google_and_search.txt  open_text_editor.txt  run_demo.py  runtime_commands.txt  smoke_run.py
test_images/: wm7_0_0000.json  wm7_0_0001.json  wm7_0_0008.json  wm7_0_0011.json  wm7_0_0018.json  wm7_0_0019.json  wm7_0_0021.json  wm7_0_0024.json  wm7_0_0032.json  wm7_0_0034.json  wm7_0_0035.json  wm7_0_0036.json  wm7_0_0037.json  wm7_0_0042.json  wm7_0_0044.json  wm7_0_0045.json  wm7_0_0054.json  wm7_0_0056.json  wm7_0_0062.json  wm7_0_0126.json  wm7_0_0129.json  wm7_0_0133.json  wm7_0_0136.json  wm7_0_0139.json  wm7_0_0140.json  wm7_0_0141.json  wm7_0_0144.json  wm7_0_0149.json  wm7_0_0150.json  wm7_0_0152.json
test_live/: test_windows_chrome_enter_live.py
tests/: test_api_smoke.py  test_brain_undo.py  test_cua_mcp_function_folders.py  test_cua_mcp_storage_tools.py  test_eye_capture.py  test_io_utils.py  (+7 more)
(+60 files in other folders)
